# AI_Cost_Optimization_Gateway

./: .gitignore  LICENSE  README.md  RUN_INSTRUCTIONS.txt  pyproject.toml  requirements.txt
aicog_v2/: __init__.py  client.py
aicog_v2/cache/: redis_backend.py
aicog_v2/core/: interfaces.py  routing.py  utils.py
aicog_v2/providers/: groq_provider.py  openai_provider.py
aicog_v2/storage/: sqlite_backend.py
examples/: debug_cache.py  example_pro.py  example_v2.py  test_aicog.py  test_health.py
tests/: test_routing.py  test_utils.py
